--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,10 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 html,
 body {
   padding: 0;
-  margin: 0;
+  margin: auto;
+  width: 80vw;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -26,4 +28,12 @@ a {
     color: white;
     background: black;
   }
+}
+
+.card {
+  @apply mb-5 block rounded-lg border border-gray-300 shadow-md;
+}
+
+.primary-button {
+  @apply rounded bg-indigo-500 py-2 px-4 shadow outline-none hover:bg-indigo-400 active:bg-indigo-300;
 }
